# whatscookingNaive

./: CMakeLists.txt  README.md  a.out  cuisine.c  cuisine.h  jsonParser.c  jsonParser.h  main.c  main.h  makefile  naive.c  naive.h  naive_bayes.c  naive_bayes.h  output.csv  recipe.c  recipe.h  teste  teste.txt  teste2.txt
Iterativo/: CMakeLists.txt  README.md  break2.txt  cuisine.c  cuisine.h  jsonParser.h  makefile  naive.c  output.csv  runner  tempos.txt
Parallel/: CMakeLists.txt  cuisine.h  hash_table.c  hash_table.h  main.c  makefile  makefile~  naive  naive.c  naive.h  naive_bayes.c  naive_bayes.h  output.csv  runFile
backup/: cronometro.h  main.c  main.h  makefile  naive.c  naive.h  runner
iterativo2/: CMakeLists.txt  break.txt  cronometro.c  jsonParser.c  main.c  makefile  naive  naive_bayes.c  naive_bayes.h  output.csv  runFile  teste
